# linux-client-server-sockets

./: CMakeLists.txt  INSTRUCTIONS.md  README.md
inc/: clients.h  common.h  middle.h  server.h  server_utils.h
src/: clients.c  middle.c  server.c  server_utils.c
